change name of manually-gathered data

--- a/src/visualization/visualize_manual_data.ipynb
+++ b/src/visualization/visualize_manual_data.ipynb
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "datafile = '../../data/cleanBib_citations.csv'\n",
+    "datafile = '../../data/citing_papers__manually_gathered.csv'\n",
     "df = pd.read_csv(datafile)\n",
     "print('Data columns: ', list(df.columns))\n",
     "df.head(2)"
@@ -371,7 +371,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "lines_to_end_of_cell_marker": 2
+   },
    "outputs": [],
    "source": [
     "lists_percents = {'mm': [],\n",
@@ -383,8 +385,7 @@
     "for d in df['percentages']:\n",
     "    if len(d) > 0:\n",
     "        for key in lists_percents.keys():\n",
-    "            lists_percents[key].append(d[key])\n",
-    "            \n"
+    "            lists_percents[key].append(d[key])"
    ]
   },
   {
@@ -439,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "expected_percentages = {'mm': 58.4,\n",
@@ -458,14 +461,14 @@
     "    if len(d) > 0:\n",
     "        for key in lists_percent_diffs.keys():\n",
     "            diff = d[key] - expected_percentages[key]\n",
-    "            lists_percent_diffs[key].append(diff)\n",
-    "\n"
+    "            lists_percent_diffs[key].append(diff)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
+    "lines_to_next_cell": 0,
     "scrolled": true
    },
    "outputs": [
@@ -504,7 +507,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
